--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <h1>Bienvenida a unos pequeños desafíos que te puse mi amor. <br> Mucha suerte, aquí tienes el primero:</h1>
 
-    <a href="desafio1.html">
+    <a href="https://claiko169.github.io/desafio1/">
         <div class="cuadradito">
             👉
         </div>
